// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::enter email should return enter email page with reauth analytics properties 1`] = `
Object {
  "contentId": "aff1628e-177d-4afc-825b-56e926b2fc1f",
  "taxonomyLevel1": "accounts",
  "taxonomyLevel2": "re auth",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email should return enter email page with sign in analytics properties 1`] = `
Object {
  "contentId": "d8767bcf-ffb8-4b43-8bda-24c6291590bb",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email should return error when csrf not present 1`] = `
Object {
  "contentId": undefined,
  "taxonomyLevel1": undefined,
  "taxonomyLevel2": undefined,
  "taxonomyLevel3": undefined,
  "taxonomyLevel4": undefined,
  "taxonomyLevel5": undefined,
}
`;

exports[`Integration::enter email should return internal server error when /user-exists API call response is 500 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email should return validation error when email not entered 1`] = `
Object {
  "contentId": "d8767bcf-ffb8-4b43-8bda-24c6291590bb",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email should return validation error when invalid email entered 1`] = `
Object {
  "contentId": "d8767bcf-ffb8-4b43-8bda-24c6291590bb",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email should return validation error when invalid email entered 2`] = `
Object {
  "contentId": "d8767bcf-ffb8-4b43-8bda-24c6291590bb",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::enter email should return validation error when invalid email entered 3`] = `
Object {
  "contentId": "d8767bcf-ffb8-4b43-8bda-24c6291590bb",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "sign in",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
